fixed problem with fonts on small size desctop

--- a/sass/fonts/_fonts.sass
+++ b/sass/fonts/_fonts.sass
@@ -2,48 +2,36 @@
     font-family: 'Montserrat', sans-serif
     font-weight: 400
     font-size: 1.3rem
-    line-height: 2rem
     color: $thirdTextColor
 
 @mixin font2
     font-family: 'Montserrat', sans-serif
     font-weight: 700
     font-size: 1.3rem
-    line-height: 2rem
     color: $secondTextColor
-
+// Жирные заголовки +300
 @mixin font3
     font-family: 'Montserrat', sans-serif
-    font-size: 1.6rem
+    font-size: 2rem
     font-weight: 700
-    letter-spacing: 0.1rem
-    line-height: 2.2rem
+// обычный текст +250
+@mixin font5
+    font-family: 'Montserrat', sans-serif
+    font-size: 2rem
+    font-weight: 400
+// Жирный обычный текст
+@mixin font6
+    font-family: 'Montserrat', sans-serif
+    font-size: 1.8rem
+    font-weight: 700
+
+@mixin font7
+    font-family: 'Montserrat', sans-serif
+    font-size: 3.6rem
+    font-weight: 700
 
 @mixin font4
     font-family: 'Montserrat', sans-serif
     font-size: 5rem
     font-weight: 700
     height: 4rem
-    letter-spacing: 0.2rem
-    line-height: 5rem
-
-@mixin font5
-    font-family: 'Montserrat', sans-serif
-    font-size: 1.8rem
-    font-weight: 400
-    letter-spacing: 0.2rem
-    line-height: 2.9rem
-
-@mixin font6
-    font-family: 'Montserrat', sans-serif
-    font-size: 1.5rem
-    font-weight: 700
-    letter-spacing: 0.1rem
-    line-height: 2.1rem
-
-@mixin font7
-    font-family: 'Montserrat', sans-serif
-    font-size: 3.6rem
-    font-weight: 700
-    letter-spacing: 0.1rem
-    line-height: 4.6rem
